--- a/app/views/trials/_edit.html.erb
+++ b/app/views/trials/_edit.html.erb
@@ -27,6 +27,6 @@
   </div>
 <% end %>
 
-<%= link_to 'Show', @trial %> |
-<%= link_to 'Back', trials_path %> |
+<!-- <%= link_to 'Show', @trial %> |
+<%= link_to 'Back', trials_path %> | -->
 <%= link_to "Home", home_path %> 
