--- a/app/views/trials/edit.html.erb
+++ b/app/views/trials/edit.html.erb
@@ -2,6 +2,6 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @trial %> |
-<%= link_to 'Back', trials_path %> |
+<!--<%= link_to 'Show', @trial %> |
+<%= link_to 'Back', trials_path %> |-->
 <%= link_to "Home", home_path %> 
