--- a/app/views/trials/_form.html.erb
+++ b/app/views/trials/_form.html.erb
@@ -20,6 +20,6 @@
     <%= f.number_field :trialID %>
   </div>
   <div class="actions">
-    <%= f.submit :class =>"btn btn-success" %>
+    <%= f.submit %>
   </div>
 <% end %>
