--- a/app/views/trials/_index.html.erb
+++ b/app/views/trials/_index.html.erb
@@ -13,15 +13,14 @@
 
 <% @trials.each do |trial| %>
   <tr>
-    <td><%= trial.trialName %> </td>
+    <td><%= link_to trial.trialName, trials_change_path(trial) %>
     <td> &nbsp &nbsp &nbsp </td>
     <td><%= trial.trialID %></td>
     <!--<td><%= link_to 'Show', trial %></td> 
-    <td><%= link_to 'Edit', edit_trial_path(trial) %></td>
     <td><%= link_to 'Destroy', trial, method: :delete, data: { confirm: 'Are you sure?' } %></td>
     <td><%= button_to "Delete", trial, :method=>:delete,  :class=>:destroy %></td> -->
    <!--  <td> <div class = "btn btn-link" data-target="#editModal" data-toggle="modal"> Edit </div> </td> -->
-     <td><%= link_to 'Edit', edit_trial_path(trial) %></td>
+ <!--     <td><%= link_to 'Edit', edit_trial_path(trial) %></td> -->
 
   </tr>
 <% end %>
