--- a/app/views/trials/show.html.erb
+++ b/app/views/trials/show.html.erb
@@ -10,7 +10,7 @@
   <%= @trial.trialID %>
 </p>
 
-
+<!-- 
 <%= link_to 'Edit', edit_trial_path(@trial) %> |
-<%= link_to 'Back', trials_path %> |
+<%= link_to 'Back', trials_path %> | -->
 <%= link_to "Home", home_path %> 
