demo for debbie

--- a/app/views/home/_view_trends.html.erb
+++ b/app/views/home/_view_trends.html.erb
@@ -17,7 +17,7 @@
             <tr><th style = "font-size:14px">CRC's:</th><td style = "font-size:14px; text-align: right;">Harry Potter</td></tr>
             <tr><th></th><td style = "font-size:14px; text-align: right;"> Bob Loblaw</td></tr>
             <tr><th></th><td style = "font-size:14px; text-align: right;"> Jerry Garcia</td></tr>
-            <tr><th></th><td style = "font-size:14px; text-align: right;"> <a href= "#"> Invite Someone</a></td></tr>
+       <!--      <tr><th></th><td style = "font-size:14px; text-align: right;"> <a href= "#"> Invite Someone</a></td></tr> -->
 </table>
 
 </div>
