--- a/app/views/home/_edit_data.html.erb
+++ b/app/views/home/_edit_data.html.erb
@@ -118,7 +118,7 @@
 
                 <% @entries_recentFirst.each do |entry| %>
                 <tr>
-                    <td style="text-align: left;"><%= entry.input_at.strftime("%m/%d/%Y") %><a style = "float:right; font-size:13px" href="#">edit  </a></td>
+                    <td style="text-align: left;"><%= entry.input_at.strftime("%m/%d/%Y") %></td>
                     
                     <td><%= entry.enrolled %></td>
 
