--- a/app/views/home/_modal.html.erb
+++ b/app/views/home/_modal.html.erb
@@ -10,7 +10,7 @@
     <div class = "row-fluid">
     <div class="span5" style ="padding-left:15px;">
     <h4>Link an existing Trial</h4>
-    <input class="span8" type="text" placeholder="Trial Name" data-provide="typeahead" data-source='["sean", "nikhil", "dan", "ashwin", "shiv"]'>
+  <!--   <input class="span8" type="text" placeholder="Trial Name" data-provide="typeahead" data-source='["sean", "nikhil", "dan", "ashwin", "shiv"]'> -->
   </div>
 
 
@@ -53,9 +53,9 @@
 
     
     <form>
-        <fieldset>
+  <!--       <fieldset>
 
-            <!-- <input class="span8" type="text" placeholder="Trial Name"> -->
+            <input class="span8" type="text" placeholder="Trial Name"> 
 
             <div class="input-append">
                 <input class="span8" type="text" placeholder="Invite Someone" id="appendedInputButton" type="text">
@@ -65,12 +65,12 @@
             <span class="help-block">*Optional - Enter a valid email</span>
 
 
-<!-- ****************** Advanced Options ***********************-->
+ ****************** Advanced Options ***********************
 
 
-<!-- <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">
   Advanced Options
-</button> -->
+</button> 
  
 <div id="demo" class="collapse">
     <p>More Options Here</p>
@@ -78,12 +78,12 @@
     </div>
     <p></p>
 
-<!-- ****************** End Advanced Options ***********************-->
+ ****************** End Advanced Options ***********************
 
 
 
 
-        </fieldset>
+        </fieldset> -->
     
    <!--  <button type="submit" class="btn">Submit</button> -->
 </form>
@@ -93,7 +93,7 @@
 
   <div class="modal-footer">
     <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-    <button class="btn btn-primary" id = "addTrial" data-dismiss="modal">Add Trial</button>
+    <!-- <button class="btn btn-primary" id = "addTrial" data-dismiss="modal">Add Trial</button> -->
   </div>
 </div>
 </div>
