--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -165,7 +165,7 @@
 
                     <div class="nav-collapse collapse">
                         <p class="navbar-text pull-right">
-                        Logged in as <a href="#" class="navbar-link">Username</a>
+                        Logged in as <a href="#" class="navbar-link"><%= session[:username] %></a>
                         </p>
                         <ul class="nav">
                              <li> <%=link_to("Splash", splashes_path) %> </li>
