--- a/app/views/splashes/index.html.erb
+++ b/app/views/splashes/index.html.erb
@@ -26,13 +26,13 @@
                        <!--  <p class="navbar-text pull-right">
                         Logged in as <a href="#" class="navbar-link">Username</a>
                         </p> -->
-                        <form class = "navbar-form pull-right"  method = "post">
-											<input style = "width: 140px; height: 30px" class="input-small" id = "email" type="text" name = "email" placeholder="Email" />
-											<input style = "width: 140px; height: 30px" class="input-small" id = "password" type="password" name = "password" placeholder= "Password" />
-											<input type = "hidden" name = "activationkey" value = "" />
-						<button class = "btn" type = "submit">Sign In</button>
-			          </form>	
-
+                        	<%= form_tag ("/login") do%>
+                        		<%= label_tag ("Username")%>
+								<%= text_field_tag :username %>
+								<%= label_tag ("Password")%>
+								<%= password_field_tag :password %>
+								<%= submit_tag ('Sign In') %>
+							<%end%>
                         <ul class="nav">
                             <li> <%=link_to("Home", home_path) %> </li>
                      
@@ -97,12 +97,14 @@
 						<tr>
 						    <%= label_tag("Username") %>
     						<%= text_field_tag (:username)  %>
-    						<% session[:current_user] = "foo"  %>
 						</tr>
 					<br/>
 						<tr>
     						<%= label_tag("Password") %>
    							<%= password_field_tag(:password) %>
+   							<%= label_tag ("Verify") %>
+   							<%= password_field_tag(:verify) %>
+   							<br/>
     						<%= submit_tag ('Submit') %>
 						</tr>
 						</table>
