--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -213,6 +213,7 @@
                             <li><a href="#edit" data-toggle="tab">Edit Data</a></li>
                             <!--<li><a href="#report" data-toggle="tab">Report</a></li>-->
                             <li><a href="#settings" data-toggle="tab">Settings</a></li>
+                            <li><a href="#invite" data-toggle="tab">Invite CRC</a><li>
                         </ul>
                         
                         <div class="tab-content">
@@ -234,7 +235,8 @@
       <!-- *********** Settings is in views/home/_settings.html.erb ****************-->                     
 <%= render "settings" %> 
 
-                            
+       
+  <%= render "invite" %>                          
                         </div>
                         
                         
