--- a/app/views/home/_settings.html.erb
+++ b/app/views/home/_settings.html.erb
@@ -82,18 +82,47 @@
       <table class = "table table-hover table-condensed table-bordered table-striped" style = "font-size:14px" id="data_table">
         <thead>
           <tr>
-              <% session[:connections].each do |c| %>
-                  <td style="text-align: left;"><b><%= c %></b></td>
-              <%end%>
+              <th style="text-align: left;">Accepted CRCs</th>
+          </tr>
+          <% session[:connections].each do |c| %>
+             <tr>
+              <td style="text-align: left;"><%= c %></td>
+             </tr>
+          <%end%>
+        </thread>
+      </table>
+
+      <table class = "table table-hover table-condensed table-bordered table-striped" style = "font-size:14px" id="data_table">
+        <thead>
+          <tr>
+              <th style="text-align: left;">Pending CRCs</th>
+          </tr>
+              <% @query = Connections.where("invitinguser = '#{session[:username]}' AND status = 'pending'") %>
+              <% @query.each do |q| %>
+                <tr>
+                  <td style="text-align: left;"><%=q.acceptinguser %></td>
+                </tr>
+              <%end%>   
           </tr>
         </thread>
       </table>
+
+      <table class = "table table-hover table-condensed table-bordered table-striped" style = "font-size:14px" id="data_table">
+        <thead>
+          <tr>
+              <th style="text-align: left;">Request to be Included</th>
+          </tr>
+
+        </thread>
+      </table>
+
+
 </fieldset>
     <% end %>
   </div>
 
   <div class "control-group">
-    <legend> Invite Friends </legend>
+    <legend> Invite CRCs </legend>
       <%= form_tag ("/invite") do%>
         <%= label_tag ("Type CRC name")%>
         <%= text_field_tag :inviteuser %>
