--- a/app/views/trials/_form.html.erb
+++ b/app/views/trials/_form.html.erb
@@ -13,11 +13,11 @@
 
   <div class="field">
     <%= f.label :trialName %><br />
-    <%= f.text_field :trialName %>
+    <%= f.text_field :trialName,  :style=>"height:30px"%>
   </div>
   <div class="field">
     <%= f.label :trialID %><br />
-    <%= f.number_field :trialID %>
+    <%= f.number_field :trialID, :style=>"height:30px"%>
   </div>
   <div class="actions">
     <%= f.submit %>
