--- a/app/views/trials/_index.html.erb
+++ b/app/views/trials/_index.html.erb
@@ -16,8 +16,8 @@
     <td><%= trial.trialName %> </td>
     <td> &nbsp &nbsp &nbsp </td>
     <td><%= trial.trialID %></td>
-    <!--<td><%= link_to 'Show', trial %></td> 
-    <td><%= link_to 'Destroy', trial, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'View', trials_change_path(:id => trial.id) %></td> 
+    <!--<td><%= link_to 'Destroy', trial, method: :delete, data: { confirm: 'Are you sure?' } %></td>
     <td><%= button_to "Delete", trial, :method=>:delete,  :class=>:destroy %></td> -->
    <!--  <td> <div class = "btn btn-link" data-target="#editModal" data-toggle="modal"> Edit </div> </td> -->
  <!--     <td><%= link_to 'Edit', edit_trial_path(trial) %></td> -->
