--- a/app/views/home/_settings.html.erb
+++ b/app/views/home/_settings.html.erb
@@ -77,7 +77,7 @@
 </div>
 
 
-  <div class "control-group">
+<!--   <div class "control-group">
     <legend> Your Friends </legend>
       <table class = "table table-hover table-condensed table-bordered table-striped" style = "font-size:14px" id="data_table">
         <thead>
@@ -90,8 +90,8 @@
              </tr>
           <%end%>
         </thread>
-      </table>
-
+      </table> -->
+<!-- 
       <table class = "table table-hover table-condensed table-bordered table-striped" style = "font-size:14px" id="data_table">
         <thead>
           <tr>
@@ -105,7 +105,7 @@
               <%end%>   
           </tr>
         </thread>
-      </table>
+      </table> -->
 
       <table class = "table table-hover table-condensed table-bordered table-striped" style = "font-size:14px" id="data_table">
         <thead>
