--- a/app/views/splashes/index.html.erb
+++ b/app/views/splashes/index.html.erb
@@ -26,17 +26,31 @@
                        <!--  <p class="navbar-text pull-right">
                         Logged in as <a href="#" class="navbar-link">Username</a>
                         </p> -->
-                        	<%= form_tag ("/login") do%>
-                        		<%= label_tag ("Username")%>
-								<%= text_field_tag :username %>
-								<%= label_tag ("Password")%>
-								<%= password_field_tag :password %>
-								<%= submit_tag ('Sign In') %>
-							<%end%>
                         <ul class="nav">                     
                             <li><a href="#about">About</a></li>
                             <li><a href="#contact">Contact</a></li>
                         </ul>
+                        <ul class="nav">
+                                     	
+                        	<li> <%= form_tag ("/login") do%>   
+                        		<%= label_tag ("Username")%>
+                        	</li>
+                        	<li>
+								<%= text_field_tag :username %>
+							</li>
+							<li>
+								<%= label_tag ("Password")%>
+							</li>
+						<li>
+								<%= password_field_tag :password %>
+							</li>
+							<li>
+								<%= submit_tag ('Sign In') %>
+								<%end%>
+							</li>
+							
+						</ul>
+                        
                     </div><!--/.nav-collapse -->
                 </div>
             </div>
