--- a/app/views/home/_view_trends.html.erb
+++ b/app/views/home/_view_trends.html.erb
@@ -1,6 +1,12 @@
 <!--************************* begin View Trends ******************** -->
                             
-    <div class="tab-pane fade in active" id="home">
+    <div class="tab-pane fade
+
+<% if @current_tab == 'view_trends' %>
+in active
+  <% end %>
+
+" id="view_trends">
 
 <div class="row-fluid">
 <div class= "span8">
