--- a/app/views/home/_settings.html.erb
+++ b/app/views/home/_settings.html.erb
@@ -37,7 +37,7 @@ in active
     <label class="control-label" for="inputEmail">Enrolled Goal</label>
     <div class="controls">
       <%= trial.text_field :enrolledGoal, :type => 'text', :style=>"height:30px"%>
-      <!--<input type="text" id="inputEmail" value='<%= session[:current_trial].enrolledGoal %>' style="height:30px">-->
+      <!--<input type="text" id="inputEmail" value='<%= @current_trial.enrolledGoal %>' style="height:30px">-->
     </div>
   </div>
 
