--- a/app/views/trials/index.html.erb
+++ b/app/views/trials/index.html.erb
@@ -1,4 +1,8 @@
-<h1>Listing trials</h1>
+<% @trials.each do |trial| %>
+<li class="active"><a href="#"><%= trial.trialName %></a></li>
+<% end %>
+
+<!--<h1>Listing trials</h1>
 
 <table>
   <tr>
@@ -13,13 +17,13 @@
   <tr>
     <td><%= trial.trialName %></td>
     <td><%= trial.trialID %></td>
-    <!--<td><%=  link_to 'Show', trial %></td> -->
+    <td><%=  link_to 'Show', trial %></td> 
     <td><%= link_to 'Edit', edit_trial_path(trial) %></td>
     <td><%= link_to 'Destroy', trial, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
 
-<br />
+<br />-->
 
 <%= link_to 'New Trial', new_trial_path %>
