--- a/app/views/splashes/index.html.erb
+++ b/app/views/splashes/index.html.erb
@@ -6,7 +6,8 @@
 	<style type="text/css">
 		body {background-image:url('/assets/medical_billing.png');}
 		h1 {font-size:500%;
-			color: black ;}
+			color: black ;
+		}
                                
      </style>
 </head>
