--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -52,7 +52,8 @@
                      width:500, height:300,
                      backgroundColor:'#EDEDED',
                      legend: {position: 'none'},
-                     chartArea: {top: 20, left: 60, height:200, width:400}
+                     chartArea: {top: 20, left: 60, height:200, width:400},
+                     legend: {position: 'none'}
                      }
                      );
             }
