new trial smooth

--- a/app/views/home/_modal.html.erb
+++ b/app/views/home/_modal.html.erb
@@ -47,12 +47,12 @@
 
   <div class="field">
     
-    <label class="control-label" for="inputEmail">Trial Name</label>
+    <label class="control-label" for="inputEmail">Trial Name (required)</label>
     <%= f.text_field :trialName, :style=>"height:30px" %>
   </div>
   <div class="field">
 
-    <label class="control-label" for="inputEmail">Trial ID</label>
+    <label class="control-label" for="inputEmail">Trial ID (required)</label>
     <%= f.number_field :trialID, :style=>"height:30px" %>
   </div>
 
