--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -185,7 +185,8 @@
                 <div class="span3" >
                     <div class="well sidebar-nav" data-spy="affix" style = "width:282px">
                         <ul class="nav nav-list">
-                            <li class="nav-header"><%= session[:username] %></li>
+                            <li class="nav-header"><h4><%= session[:username] %><h4></li>
+                            <hr>
                         <!--     <li class="nav-header">My Trials</li>
                             <li class="active"><a href="#">Cancer</a></li>
                             <li><a href="#">Flesh Eating Bacteria</a></li> -->
