--- a/app/views/home/_modal.html.erb
+++ b/app/views/home/_modal.html.erb
@@ -66,6 +66,11 @@
   </div>
 
 <div class="field">
+  <label class="control-label" for="inputEmail">Start Date (optional)</label>
+    <%= f.text_field :startDate, :style=>"height:30px" %>
+  </div>
+
+<div class="field">
   <label class="control-label" for="inputEmail">End Date (optional)</label>
     <%= f.text_field :endDate, :style=>"height:30px" %>
   </div>
