--- a/app/views/home/_modal.html.erb
+++ b/app/views/home/_modal.html.erb
@@ -57,21 +57,21 @@
   </div>
 
   <div class="field">
-   <label class="control-label" for="inputEmail">Enrolled Goal (optional)</label>
+   <label class="control-label" for="inputEmail">Enrolled Goal</label>
     <%= f.number_field :enrolledGoal, :style=>"height:30px" %>
   </div>
   <div class="field">
-    <label class="control-label" for="inputEmail">Completed Goal (optional)</label>
+    <label class="control-label" for="inputEmail">Completed Goal</label>
     <%= f.number_field :completedGoal, :style=>"height:30px" %>
   </div>
 
 <div class="field">
-  <label class="control-label" for="inputEmail">Start Date (optional)</label>
+  <label class="control-label" for="inputEmail">Start Date</label>
     <%= f.text_field :startDate, :style=>"height:30px" %>
   </div>
 
 <div class="field">
-  <label class="control-label" for="inputEmail">End Date (optional)</label>
+  <label class="control-label" for="inputEmail">End Date</label>
     <%= f.text_field :endDate, :style=>"height:30px" %>
   </div>
 
