--- a/app/views/splashes/index.html.erb
+++ b/app/views/splashes/index.html.erb
@@ -33,27 +33,24 @@
                             <li><a href="#contact">Contact</a></li>
                         </ul>
                      
-                         <ul class="nav">    
+                         <ul class="nav pull-right">    
 
                          <li>  	
                         <%= form_tag ("/login") do%>   
-                        		<%= label_tag ("Username")%>
+                        		
                         </li>
                         <li>
-            
-								<%= text_field_tag :username %>
+								<%= text_field_tag :username, '', :style => "height:30px", :placeholder => "User Name" %>
 						</li>
 						<li>
-						
-								<%= label_tag ("Password")%>
+						&nbsp &nbsp
 						</li>
 						<li>
-						
-								<%= password_field_tag :password %>
+								<%= password_field_tag :password , '', :style => "height:30px", :placeholder => "Password" %>
 						</li>
 						<li>
-						
-								<%= submit_tag ('Sign In') %>
+								&nbsp &nbsp
+								<%= submit_tag ('Sign In'), :class => "btn btn-primary" %>
 						</li>
 						<%end%>
 					</ul>
@@ -117,40 +114,30 @@
 						<%= form_tag ("/register") do %>
 						<table>
 						<tr>
-						    <%= label_tag("Username") %>
-    						<%= text_field_tag (:username)  %>
+    						<%= text_field_tag :username, '', :style => "height:30px", :placeholder => "User Name"  %>
+    						&nbsp
 						</tr>
 					<br/>
 						<tr>
-    						<%= label_tag("Password") %>
-   							<%= password_field_tag(:password) %>
-   							<%= label_tag ("Verify") %>
-   							<%= password_field_tag(:verify) %>
+
+   							<%= password_field_tag :password, '', :style => "height:30px", :placeholder => "Password"  %>
+ 							&nbsp &nbsp
+   							<%= password_field_tag :verify, '', :style => "height:30px", :placeholder => "Retype Password"  %>
    							<br/>
-    						<%= submit_tag ('Submit') %>
+   								<p><input type="checkbox" id="emailupdates" name="emailupdates" value="emailupdates" checked="checked"> Receive Email Updates</p>
+   							<h5>By clicking Sign Up, you agree to our <a href="http://koalacab.com/index.php/site/terms_of_use">Terms</a> and <a href="http://koalacab.com/index.php/site/privacy_policy">Privacy Policy</a>.</h5>
+    						<%= submit_tag ('Sign Up'),  :class => "btn btn-primary", :style=> "width: 240px; height: 50px" %>
 						</tr>
 						</table>
-					<% end %>
-					<!--<form method="post">
-					<!<input style="height: 30px; width: 255px" class="xlarge" id="xlInput" name="fullname" size="25" type="text" value="" placeholder=>
-					<!<input style="height: 30px; width: 255px" class="xlarge" type="password" id="xlInput" name="password1" size="25" value="" placeholder="Last Name">
-					<!<input style="height: 30px; width: 255px" class="xlarge" type="password" id="xlInput" name="password2" size="25" placeholder="Password (at least 6 characters)">
-					<!<input style="height: 30px; width: 255px" class="xlarge" id="xlInput" name="emailaddress" size="25" type="text" value="" placeholder="Retype Password">
-					<!<input style="height: 30px; width: 255px" class="xlarge" id="xlInput" name="cellnumber" maxlength="10" size="25" type="text" value="" placeholder="Email Address">
-								<!-- <p style="font-family: Delius">Cell Phone Service Provider (For FREE text message cab updates)</p> -->
-								<!-- <p><select class="medium" name="service_provider" id="service_provider">
-									<option> Verizon Wireless </option>
-									<option> AT&amp;T </option>
-									<option> T-Mobile </option>
-									<option> Sprint </option>
-									<option> I would rather not </option>
-									
-								</select></p> -->
-					<p><input type="checkbox" id="emailupdates" name="emailupdates" value="emailupdates" checked="checked"> Receive Email Updates</p>
-						<h5>By clicking Sign Up, you agree to our <a href="http://koalacab.com/index.php/site/terms_of_use">Terms</a> and <a href="http://koalacab.com/index.php/site/privacy_policy">Privacy Policy</a>.</h5>
+				
+		
+				
+					
 						<br>
 						<input type="hidden" name="form_submitted" value="1">
 						<button style="width: 240px; height: 50px" class="btn btn-primary" type="submit"><h2 style="font-family: Delius">Sign Up</h2>
+
+						<% end %>
 						<div style="text-align: center; padding-top: 25px" class="fb-like fb_edge_widget_with_comment fb_iframe_widget" data-href="https://www.facebook.com/pages/KoalaCab/171718282927467" data-send="true" data-width="10" data-show-faces="false" data-font="verdana" fb-xfbml-state="rendered"><span style="height: 28px; width: 285px;"><iframe id="f1ca5853e" name="f79f26ea" scrolling="no" style="border: none; overflow: hidden; height: 28px; width: 285px;" title="Like this content on Facebook." class="fb_ltr" src="http://www.facebook.com/plugins/like.php?api_key=216543338370998&amp;locale=en_GB&amp;sdk=joey&amp;channel_url=http%3A%2F%2Fstatic.ak.facebook.com%2Fconnect%2Fxd_arbiter.php%3Fversion%3D18%23cb%3Df36f2ba9%26origin%3Dhttp%253A%252F%252Fkoalacab.com%252Ff42f7966%26domain%3Dkoalacab.com%26relation%3Dparent.parent&amp;href=https%3A%2F%2Fwww.facebook.com%2Fpages%2FKoalaCab%2F171718282927467&amp;node_type=link&amp;width=285&amp;font=verdana&amp;layout=standard&amp;colorscheme=light&amp;show_faces=false&amp;send=true&amp;extended_social_context=false"></iframe></span></div>
 	
 				</button></form></div>
